Fixed Contact Form Page

--- a/Contact.html
+++ b/Contact.html
@@ -24,11 +24,11 @@
                 </div> 
               </a>
               <ul>
-                  <li><a href="https://raedraihan.github.io/Portfolio/index.html">Home</a></li>
-                  <li><a href="https://raedraihan.github.io/Portfolio/tys.html">How To Play</a></li>
-                  <li><a href="https://raedraihan.github.io/Portfolio/works.html">Controls</a></li>
-                  <li><a href="https://raedraihan.github.io/Portfolio/documents.html">Credits</a></li>
-                  <li><a href="https://raedraihan.github.io/Portfolio/contact.html">Contact</a></li>
+                <li><a href="https://raedraihan.github.io/TheTomorrowProject/index.html">Home</a></li>
+                <li><a href="https://raedraihan.github.io/TheTomorrowProject/howToPlay.html">How To Play</a></li>
+                <li><a href="https://raedraihan.github.io/TheTomorrowProject/Controls.html">Controls</a></li>
+                <li><a href="https://raedraihan.github.io/TheTomorrowProject/Credits.html">Credits</a></li>
+                <li><a href="https://raedraihan.github.io/TheTomorrowProject/Contact.html">Contact</a></li>
               </ul>
           </nav>
           <hr class="gold-line">
@@ -38,7 +38,7 @@
           </div>
           
           <div class="contact">
-            <form  id="contactForm" action="https://formspree.io/f/movvjeol" method="POST" target="_blank" rel="noopener noreferrer">
+            <form  id="contactForm" action="https://formspree.io/f/xgvvpnop" method="POST" target="_blank" rel="noopener noreferrer">
                 <label for="fullName">Full Name</label>
                 <input type="text" name="fullName" required>
                 <br>
