--- a/Controls.html
+++ b/Controls.html
@@ -24,11 +24,11 @@
                 </div> 
               </a>
               <ul>
-                  <li><a href="https://raedraihan.github.io/Portfolio/index.html">Home</a></li>
-                  <li><a href="https://raedraihan.github.io/Portfolio/tys.html">How To Play</a></li>
-                  <li><a href="https://raedraihan.github.io/Portfolio/works.html">Controls</a></li>
-                  <li><a href="https://raedraihan.github.io/Portfolio/documents.html">Credits</a></li>
-                  <li><a href="https://raedraihan.github.io/Portfolio/contact.html">Contact</a></li>
+                <li><a href="https://raedraihan.github.io/TheTomorrowProject/index.html">Home</a></li>
+                <li><a href="https://raedraihan.github.io/TheTomorrowProject/howToPlay.html">How To Play</a></li>
+                <li><a href="https://raedraihan.github.io/TheTomorrowProject/Controls.html">Controls</a></li>
+                <li><a href="https://raedraihan.github.io/TheTomorrowProject/Credits.html">Credits</a></li>
+                <li><a href="https://raedraihan.github.io/TheTomorrowProject/Contact.html">Contact</a></li>
               </ul>
           </nav>
           <hr class="gold-line">
