--- a/Credits.html
+++ b/Credits.html
@@ -44,6 +44,21 @@
       </div>
   
   </div>
+  <div class="Credits">   
+    <h1>Main Menu Background Menu Music</h1>
+    <p>Finger Dancin' by Masayoshi Takanaka <a href="https://youtu.be/i_HhGVZYMzI">(Link To Song)</a></p>
+    <br>
+    <h1>In Game Background Music</h1>
+    <p>Chased by Dancing Skeletons by Cyriak Harris</p>
+    <p>Hiding from the Robo-Zombies by Cyriak Harris</p>
+    <p>Running from the Jazz Robots by Cyriak Harris</p>
+    <p>Somebody Set Up Us The Bomb by Cyriak Harris</p>
+    <br>
+    <h1>External Sprites Used</h1>
+    <p>Boxing Glove <a href="https://minecraft.novaskin.me/post/5375508806631424/boxing-glove">(Link To Sprite)</a></p>
+    <p>Star<a href="https://media.istockphoto.com/id/1009985128/vector/vector-pixel-art-star.jpg?s=612x612&w=0&k=20&c=r7IRJ9NZoG8NSRYajyqMMvO_aAxmLnrwYbG2bJb1ALU=">(Link To Sprite)</a></p>
+
+  </div>
     
   </body>
 </html>
