Finished Controls Screen

--- a/Controls.html
+++ b/Controls.html
@@ -42,6 +42,12 @@
       </div>
   
   </div>
+  <div class="Controls">
+    <h1>Keyboard Binds</h1>
+    <img src="images/keyboard.png"  alt="Keyboard Bindings">
+    <h1>Mouse Binds</h1>
+    <img src="images/mouse.png"  alt="Mouse Bindings">
+  </div>
     
   </body>
 </html>
