Finished How to Play Section, Plus fixed some bugs with the game input

--- a/index.html
+++ b/index.html
@@ -54,6 +54,33 @@
     </div>
     <h1 >Make Sure You Play In Full Screen</h1>
   </div>
+
+  <script>
+    document.addEventListener('keydown', function(event) {
+        // Check if the Ctrl key is pressed
+        if (event.ctrlKey) {
+            // Prevent specific key combinations
+            switch (event.key.toLowerCase()) {
+                case 'w':  // Ctrl+W
+                case 'a':  // Ctrl+A
+                case 's':  // Ctrl+S
+                case 'd':  // Ctrl+D
+                    event.preventDefault();
+                    console.log(`Blocked ${event.key}`);
+                    break;
+                default:
+                    console.log("Ctrl key pressed, but not blocked");
+                    break;
+            }
+        }
+    });
+
+    const gameElement = document.getElementById('unityContainer');  // Corrected element ID
+    if (gameElement) {
+        gameElement.setAttribute('tabindex', '0'); // Make the game focusable
+        gameElement.focus(); // Automatically focus on the game area
+    }
+</script>
     
   </body>
 </html>
