--- a/howToPlay.html
+++ b/howToPlay.html
@@ -42,6 +42,10 @@
       </div>
   
   </div>
+  <div class="HowTo">
+    <h1>Game Mechanics/Controls Explained</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/adqFroucB7U?si=8IqldaPomtZjxc6_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </div>
     
   </body>
 </html>
