--- a/Credits.html
+++ b/Credits.html
@@ -53,6 +53,7 @@
     <p>Hiding from the Robo-Zombies by Cyriak Harris</p>
     <p>Running from the Jazz Robots by Cyriak Harris</p>
     <p>Somebody Set Up Us The Bomb by Cyriak Harris</p>
+    <p>Beat Box (Diversion 1) by Art Of Noise</p>
     <br>
     <h1>External Sprites Used</h1>
     <p>Boxing Glove <a href="https://minecraft.novaskin.me/post/5375508806631424/boxing-glove">(Link To Sprite)</a></p>
