--- a/howToPlay.html
+++ b/howToPlay.html
@@ -45,6 +45,8 @@
   <div class="HowTo">
     <h1>Game Mechanics/Controls Explained</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/adqFroucB7U?si=8IqldaPomtZjxc6_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <h1>How to play the multiplayer</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/0N8aVvYcgdY?si=Iut_VLoTxsUYOGo1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
     
   </body>
